--- a/package.json
+++ b/package.json
@@ -1,9 +1,20 @@
 {
+  "name": "master",
+  "version": "0.0.2",
+  "description": "A framework to build applications in node",
+  "main": "./cli.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Alexander Batista",
+  "license": "ISC",
   "dependencies": {
-    "bcrypt": "^1.0.3",
-    "mastercontroller": "^1.0.11",
-    "mongodb": "^3.0.1",
-    "mongoose": "^4.10.8",
-    "socket.io": "^2.0.4"
+    "commander": "^2.19.0",
+    "fs-extra": "^7.0.0 ",
+    "node-run-cmd": "^1.0.1",
+    "nodegit": "^0.23.0"
+  },
+  "bin": {
+    "master": "./cli.js"
   }
 }
