--- a/master/package.json
+++ b/master/package.json
@@ -3,8 +3,8 @@
     "bcrypt-nodejs": "^0.0.3",
     "better-sqlite3": "^5.4.0",
     "mastercontroller": "^1.0.28",
-    "masterrecord": "^0.0.6cd",
+    "masterrecord": "^0.0.7",
     "socket.io": "^2.2.0"
   },
-  "version": "1.0.25"
+  "version": "1.0.26"
 }
