--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "master",
-  "version": "0.0.6",
-  "description": "A framework to build applications in node",
+  "version": "0.0.7",
+  "description": "A framework to build MVC applications in node",
   "main": "./cli.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,8 +9,8 @@
   "author": "Alexander Batista",
   "license": "ISC",
   "dependencies": {
-    "commander": "^2.20.0",
-    "fs-extra": "^8.0.1"
+    "commander": "^3.0.1",
+    "fs-extra": "^8.1.0"
   },
   "bin": {
     "master": "./cli.js"
