--- a/component/package.json
+++ b/component/package.json
@@ -1,10 +1,6 @@
 {
   "dependencies": {
-    "bcrypt": "^3.0.6",
-    "better-sqlite3": "^5.4.0",
-    "mastercontroller": "^1.0.36",
-    "masterrecord": "^0.0.10",
-    "socket.io": "^2.2.0"
+    "mastercontroller": "^1.1.4"
   },
-  "version": "0.0.1"
+  "version": "1.0.29"
 }
