--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "master",
-  "version": "0.0.7",
-  "description": "A framework to build MVC applications in node",
+  "version": "0.0.9",
+  "description": "Master is a node web-application framework that includes everything needed to create database-backed web applications according to the Model-View-Controller (MVC) pattern",
   "main": "./cli.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,8 +9,8 @@
   "author": "Alexander Batista",
   "license": "ISC",
   "dependencies": {
-    "commander": "^3.0.1",
-    "fs-extra": "^8.1.0"
+    "commander": "^8.1.0",
+    "fs-extra": "^10.0.0"
   },
   "bin": {
     "master": "./cli.js"
