--- a/master/package.json
+++ b/master/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
-    "mastercontroller": "^1.1.8"
+    "content-type": "^1.0.4",
+    "mastercontroller": "^1.1.11",
+    "socket.io": "^4.2.0"
   },
-  "version": "1.0.30"
+  "version": "1.0.31"
 }
