--- a/component/package.json
+++ b/component/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
-    "mastercontroller": "^1.1.6"
+    "content-type": "^1.0.4",
+    "mastercontroller": "^1.1.14",
+    "socket.io": "^4.5.2"
   },
-  "version": "1.0.29"
+  "version": "1.0.33"
 }
