--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
   "name": "master",
-  "version": "1.0.2",
-  "description": "Master is a node web-application framework that includes everything needed to create database-backed web applications according to the Model-View-Controller (MVC) pattern",
-  "main": "./cli.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Alexander Batista",
-  "license": "ISC",
   "dependencies": {
     "commander": "^9.4.0",
     "fs-extra": "^10.1.0"
   },
+  "version": "1.0.3",
+  "description": "Master is a node web-application framework that includes everything needed to create database-backed web applications according to the Model-View-Controller (MVC) pattern",
+  "homepage": "https://github.com/Tailor/Master#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Tailor/Master.git"
+  },
+  "main": "./cli.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Alexander Rich",
+  "license": "ISC",
+
   "bin": {
     "master": "./cli.js"
   }
